Fleshed out the unary color function section.

--- a/latex/siggraph2013/colorCompat.tex
+++ b/latex/siggraph2013/colorCompat.tex
@@ -1,4 +1,4 @@
-\section{Color Compatibility Functions}
+\section{Color Compatibility Function}
 \label{sec:colorCompat}
 
 \remark{Reword introduction} Previous work has shown that the aesthetic appeal of an image can be improved by increasing the compatibility or harmony of image colors ~\cite{CohenOrHarmonization,DressUp,ColorizationUsingHarmony,ODonovan}. Our model includes a color compatibility term to score the general appeal of the colors in an assignment, based on the compatibility model introduced by O'Donovan et al.~\shortcite{ODonovan}. This compatibility model predicts 0-5 numeric aesthetic ratings for five-color `color themes,' which are ordered rows of five colors. 
