--- a/latex/siggraph2013/patternColoring.bib
+++ b/latex/siggraph2013/patternColoring.bib
@@ -482,3 +482,12 @@ pages={599-619}
  address = {New York, NY, USA},
  keywords = {computational photography, intrinsic images, reflectance-illumination separation},
 } 
+
+@book{ColorfulnessReference,
+  title={Colours in the Mind - Colour Systems in Reality},
+  author={L{\"u}bbe, E.},
+  isbn={9783839136928},
+  url={http://books.google.com/books?id=xTTZ\_H7CJHgC},
+  year={2010},
+  publisher={Books on Demand}
+}
