--- a/latex/siggraph2013/evaluation.tex
+++ b/latex/siggraph2013/evaluation.tex
@@ -34,7 +34,7 @@ Random & 17 & 115 \\
 \hline
 \end{tabular}
 \end{center}
-\caption{Total number of times each suggestion type was selected as a top 4 and worst 4 pattern (out of 260 total observations)}
+\caption{Total number of times each suggestion type was selected as a top 4 and worst 4 pattern (out of 260 total observations)~\remark{D: I'd prefer a chart that allows visual comparisons (bar chart?)}}
 
  \label{table:study}
 \end{table}
